--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "husky": "^4",
     "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
   "husky": {
