--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
 		"eslint",
 		"@typescript-eslint"
 	],
-	"devDependencies": {
+	"dependencies": {
 		"@types/node": "^14.14.35",
 		"@typescript-eslint/eslint-plugin": "^4.18.0",
+		"@typescript-eslint/experimental-utils": "^4.18.0",
 		"@typescript-eslint/parser": "^4.18.0",
 		"eslint": "^7.22.0",
 		"eslint-config-airbnb": "^18.2.1",
