--- a/package.json
+++ b/package.json
@@ -1,9 +1,40 @@
 {
-  "name": "@michaeljaltamirano/eslint-plugin",
-  "version": "0.0.1",
-  "description": "Michael's Personal ESLint Preferences",
-  "main": "lib/",
-  "repository": "https://www.github.com/michaeljaltamirano/eslint-plugin",
-  "author": "Michael J. Altamirano",
-  "license": "MIT"
+	"name": "@michaeljaltamirano/eslint-plugin",
+	"version": "0.0.1",
+	"description": "Strongly-opinionated ESLint config",
+	"main": "lib/",
+	"repository": "https://www.github.com/michaeljaltamirano/eslint-plugin",
+	"author": "Michael J. Altamirano",
+	"license": "MIT",
+	"keywords": [
+		"eslint",
+		"@typescript-eslint"
+	],
+	"dependencies": {
+		"@types/node": "^14.14.35",
+		"@typescript-eslint/eslint-plugin": "^4.18.0",
+		"@typescript-eslint/experimental-utils": "^4.18.0",
+		"@typescript-eslint/parser": "^4.18.0",
+		"eslint": "^7.22.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-react": "^7.22.0",
+		"eslint-plugin-react-hooks": "^4.2.0",
+		"husky": "^4",
+		"lint-staged": "^10.5.4",
+		"prettier": "^2.2.1",
+		"typescript": "^4.2.3"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "yarn run lint-staged",
+			"pre-push": "yarn run tsc"
+		}
+	},
+	"scripts": {
+		"build": "rm -rf lib && yarn run tsc -p tsconfig.json"
+	}
 }
