Add lint script

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 	},
 	"scripts": {
 		"build": "yarn run tsc --build",
-		"clean": "yarn run tsc --build --clean"
+		"clean": "yarn run tsc --build --clean",
+		"lint": "yarn run eslint src/**/*"
 	}
 }
