--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@typescript-eslint"
 	],
 	"dependencies": {
+		"@types/jest": "^26.0.20",
 		"@types/node": "^14.14.35",
 		"@typescript-eslint/eslint-plugin": "^4.18.0",
 		"@typescript-eslint/experimental-utils": "^4.18.0",
@@ -20,13 +21,16 @@
 		"eslint-config-airbnb-base": "^14.2.1",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jest": "^24.3.1",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"husky": "^4",
+		"jest": "^26.6.3",
 		"lint-staged": "^10.5.4",
 		"prettier": "^2.2.1",
+		"ts-jest": "^26.5.3",
 		"typescript": "^4.2.3"
 	},
 	"peerDependencies": {
@@ -34,6 +38,7 @@
 		"eslint-config-airbnb": "^18.2.1",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jest": "^24.3.1",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.22.0",
