--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@typescript-eslint"
 	],
 	"dependencies": {
+		"@michaeljaltamirano/eslint-plugin": "^0.1.5",
 		"@types/jest": "^26.0.20",
 		"@types/node": "^14.14.35",
 		"@typescript-eslint/eslint-plugin": "^4.18.0",
