--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"eslint",
 		"@typescript-eslint"
 	],
-	"dependencies": {
+	"devDependencies": {
 		"@michaeljaltamirano/eslint-plugin": "^0.1.5",
 		"@types/jest": "^26.0.20",
 		"@types/node": "^14.14.35",
