--- a/package.json
+++ b/package.json
@@ -10,23 +10,40 @@
 		"eslint",
 		"@typescript-eslint"
 	],
-	"dependencies": {
+	"devDependencies": {
+		"@michaeljaltamirano/eslint-plugin": "^0.1.5",
+		"@types/jest": "^26.0.20",
 		"@types/node": "^14.14.35",
 		"@typescript-eslint/eslint-plugin": "^4.18.0",
 		"@typescript-eslint/experimental-utils": "^4.18.0",
 		"@typescript-eslint/parser": "^4.18.0",
 		"eslint": "^7.22.0",
 		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-airbnb-base": "^14.2.1",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jest": "^24.3.1",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"husky": "^4",
+		"jest": "^26.6.3",
 		"lint-staged": "^10.5.4",
 		"prettier": "^2.2.1",
+		"ts-jest": "^26.5.3",
 		"typescript": "^4.2.3"
+	},
+	"peerDependencies": {
+		"eslint": "^7.22.0",
+		"eslint-config-airbnb": "^18.2.1",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jest": "^24.3.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-react": "^7.22.0",
+		"eslint-plugin-react-hooks": "^4.2.0"
 	},
 	"husky": {
 		"hooks": {
@@ -35,6 +52,8 @@
 		}
 	},
 	"scripts": {
-		"build": "rm -rf lib && yarn run tsc -p tsconfig.json"
+		"build": "yarn run tsc --build",
+		"clean": "yarn run tsc --build --clean",
+		"lint": "yarn run eslint src/**/*"
 	}
 }
