--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"eslint-plugin-jest": "^24.3.1",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-prettier": "^3.3.1",
+		"eslint-plugin-promise": "^4.3.1",
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"husky": "^4",
@@ -55,6 +56,6 @@
 		"build": "yarn run tsc --build",
 		"clean": "yarn run tsc --build --clean",
 		"lint": "yarn run eslint 'src/**/*.ts'",
-		"test": "yarn run jest"
+		"test": "yarn run jest src"
 	}
 }
