--- a/package.json
+++ b/package.json
@@ -11,42 +11,45 @@
 		"@typescript-eslint"
 	],
 	"devDependencies": {
-		"@michaeljaltamirano/eslint-plugin": "^0.2.0",
-		"@types/jest": "^26.0.20",
-		"@types/node": "^14.14.35",
-		"@typescript-eslint/eslint-plugin": "^4.18.0",
-		"@typescript-eslint/experimental-utils": "^4.18.0",
-		"@typescript-eslint/parser": "^4.18.0",
-		"eslint": "^7.22.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jest": "^24.3.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-promise": "^4.3.1",
-		"eslint-plugin-react": "^7.22.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"eslint-plugin-sonarjs": "^0.6.0",
-		"husky": "^4",
-		"jest": "^26.6.3",
-		"lint-staged": "^10.5.4",
-		"prettier": "^2.2.1",
-		"ts-jest": "^26.5.3",
-		"typescript": "^4.2.3"
+		"@michaeljaltamirano/eslint-plugin": "file:./lib",
+		"@types/jest": "^27.4.0",
+		"@types/node": "^17.0.17",
+		"@typescript-eslint/eslint-plugin": "^5.11.0",
+		"@typescript-eslint/experimental-utils": "^5.11.0",
+		"@typescript-eslint/parser": "^5.11.0",
+		"eslint": "^8.9.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jest": "^26.1.0",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.28.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"eslint-plugin-sonarjs": "^0.11.0",
+		"husky": "^4.3.8",
+		"jest": "^27.5.1",
+		"lint-staged": "^12.3.3",
+		"prettier": "^2.5.1",
+		"ts-jest": "^27.1.3",
+		"typescript": "^4.5.5",
+		"yarn-deduplicate": "^3.1.0"
 	},
 	"peerDependencies": {
-		"eslint": "^7.22.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jest": "^24.3.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-react": "^7.22.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"eslint-plugin-sonarjs": "^0.6.0"
+		"eslint": "^8.9.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jest": "^26.1.0",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.28.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"eslint-plugin-sonarjs": "^0.11.0"
 	},
 	"husky": {
 		"hooks": {
