--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@michaeljaltamirano/eslint-plugin",
-	"version": "0.5.0",
+	"version": "0.6.0-beta",
 	"description": "Strongly-opinionated ESLint config",
 	"main": "lib/",
 	"repository": "https://www.github.com/michaeljaltamirano/eslint-plugin",
@@ -11,42 +11,45 @@
 		"@typescript-eslint"
 	],
 	"devDependencies": {
-		"@michaeljaltamirano/eslint-plugin": "^0.2.0",
-		"@types/jest": "^26.0.20",
-		"@types/node": "^14.14.35",
-		"@typescript-eslint/eslint-plugin": "^4.18.0",
-		"@typescript-eslint/experimental-utils": "^4.18.0",
-		"@typescript-eslint/parser": "^4.18.0",
-		"eslint": "^7.22.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jest": "^24.3.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-promise": "^4.3.1",
-		"eslint-plugin-react": "^7.22.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"eslint-plugin-sonarjs": "^0.6.0",
-		"husky": "^4",
-		"jest": "^26.6.3",
-		"lint-staged": "^10.5.4",
-		"prettier": "^2.2.1",
-		"ts-jest": "^26.5.3",
-		"typescript": "^4.2.3"
+		"@michaeljaltamirano/eslint-plugin": "^0.6.0-beta",
+		"@types/jest": "^27.4.1",
+		"@types/node": "^17.0.21",
+		"@typescript-eslint/eslint-plugin": "^5.15.0",
+		"@typescript-eslint/experimental-utils": "^5.15.0",
+		"@typescript-eslint/parser": "^5.15.0",
+		"eslint": "^8.11.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jest": "^26.1.2",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"eslint-plugin-sonarjs": "^0.12.0",
+		"husky": "^4.3.8",
+		"jest": "^27.5.1",
+		"lint-staged": "^12.3.7",
+		"prettier": "^2.6.0",
+		"ts-jest": "^27.1.3",
+		"typescript": "^4.6.2",
+		"yarn-deduplicate": "^3.1.0"
 	},
 	"peerDependencies": {
-		"eslint": "^7.22.0",
-		"eslint-config-airbnb": "^18.2.1",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jest": "^24.3.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-react": "^7.22.0",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"eslint-plugin-sonarjs": "^0.6.0"
+		"eslint": "^8.9.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-jest": "^26.1.0",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.28.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"eslint-plugin-sonarjs": "^0.11.0"
 	},
 	"husky": {
 		"hooks": {
@@ -58,6 +61,7 @@
 		"build": "yarn run tsc --build",
 		"clean": "yarn run tsc --build --clean",
 		"lint": "yarn run eslint 'src/**/*.ts'",
+		"lint-tests": "yarn run eslint --no-eslintrc --config ./.eslintrc.jest.js 'src/**/*.test.ts' 'src/tests/**/*.ts'",
 		"test": "yarn run jest src"
 	}
 }
