--- a/package.json
+++ b/package.json
@@ -11,57 +11,52 @@
 		"@typescript-eslint"
 	],
 	"devDependencies": {
-		"@michaeljaltamirano/eslint-plugin": "^0.6.0-beta",
+		"@michaeljaltamirano/eslint-plugin": "^0.7.0",
 		"@types/jest": "^27.4.1",
-		"@types/node": "^17.0.21",
-		"@typescript-eslint/eslint-plugin": "^5.15.0",
-		"@typescript-eslint/experimental-utils": "^5.15.0",
-		"@typescript-eslint/parser": "^5.15.0",
-		"eslint": "^8.11.0",
+		"@types/node": "^17.0.23",
+		"@typescript-eslint/eslint-plugin": "^5.17.0",
+		"@typescript-eslint/experimental-utils": "^5.17.0",
+		"@typescript-eslint/parser": "^5.17.0",
+		"eslint": "^8.12.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-jest": "^26.1.2",
+		"eslint-plugin-jest": "^26.1.3",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-react": "^7.29.4",
-		"eslint-plugin-react-hooks": "^4.3.0",
-		"eslint-plugin-sonarjs": "^0.12.0",
-		"husky": "^4.3.8",
+		"eslint-plugin-react-hooks": "^4.4.0",
+		"eslint-plugin-sonarjs": "^0.13.0",
+		"husky": "^7.0.4",
 		"jest": "^27.5.1",
 		"lint-staged": "^12.3.7",
-		"prettier": "^2.6.0",
-		"ts-jest": "^27.1.3",
-		"typescript": "^4.6.2",
-		"yarn-deduplicate": "^3.1.0"
+		"prettier": "^2.6.2",
+		"ts-jest": "^27.1.4",
+		"typescript": "^4.6.3",
+		"yarn-deduplicate": "^4.0.0"
 	},
 	"peerDependencies": {
-		"eslint": "^8.9.0",
+		"eslint": "^8.12.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.25.4",
-		"eslint-plugin-jest": "^26.1.0",
+		"eslint-plugin-jest": "^26.1.3",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.0.0",
-		"eslint-plugin-react": "^7.28.0",
-		"eslint-plugin-react-hooks": "^4.3.0",
-		"eslint-plugin-sonarjs": "^0.11.0"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "yarn run lint-staged",
-			"pre-push": "yarn run tsc"
-		}
+		"eslint-plugin-react": "^7.29.4",
+		"eslint-plugin-react-hooks": "^4.4.0",
+		"eslint-plugin-sonarjs": "^0.13.0"
 	},
 	"scripts": {
 		"build": "yarn run tsc --build",
 		"clean": "yarn run tsc --build --clean",
 		"lint": "yarn run eslint 'src/**/*.ts'",
 		"lint-tests": "yarn run eslint --no-eslintrc --config ./.eslintrc.jest.js 'src/**/*.test.ts' 'src/tests/**/*.ts'",
-		"test": "yarn run jest src"
+		"test": "yarn run jest src",
+		"prepare": "husky install"
 	}
 }
