--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-cypress": "^2.12.1",
 		"eslint-plugin-import": "^2.25.4",
 		"eslint-plugin-jest": "^26.1.2",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
